Начал делать лабу №8 (ЧМВ)
Куча всяких наворотов и ничего по делу, потому что то ли я тупой, то ли этот ВебВью устарен, то ли все вместе

--- a/Programming/5_sem (ChMV)/resources/resources.qrc
+++ b/Programming/5_sem (ChMV)/resources/resources.qrc
@@ -19,6 +19,7 @@
         <file alias="clock">images/clock.png</file>
         <file alias="planet">images/saturn.png</file>
         <file alias="add_user">images/add-contact.png</file>
+        <file alias="reload">images/rotate-to-right.png</file>
     </qresource>
     <qresource prefix="/other">
         <file alias="logo">images/camera-shutter.png</file>
