Курсовая по ЧМВ (База данных)

--- a/Programming/5_sem (ChMV)/resources/resources.qrc
+++ b/Programming/5_sem (ChMV)/resources/resources.qrc
@@ -23,5 +23,6 @@
     </qresource>
     <qresource prefix="/other">
         <file alias="logo">images/camera-shutter.png</file>
+        <file alias="wedding">images/ring.png</file>
     </qresource>
 </RCC>
