--- a/Programming/5_sem (ChMV)/resources/resources.qrc
+++ b/Programming/5_sem (ChMV)/resources/resources.qrc
@@ -24,5 +24,6 @@
     <qresource prefix="/other">
         <file alias="logo">images/camera-shutter.png</file>
         <file alias="wedding">images/ring.png</file>
+        <file alias="weddingbg">other/Fon-dlja-svadebnoj-otkrytki.jpg</file>
     </qresource>
 </RCC>
