--- a/Programming/5_sem (ChMV)/FNickCurs/mainwindow.ui
+++ b/Programming/5_sem (ChMV)/FNickCurs/mainwindow.ui
@@ -50,7 +50,7 @@ border-width: 0px;
     <item row="0" column="0">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="weddingPage">
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -84,6 +84,19 @@ border-width: 0px;
              </size>
             </property>
            </spacer>
+          </item>
+          <item>
+           <widget class="QPushButton" name="buttonDelete">
+            <property name="autoFillBackground">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>Отменить свадьбу</string>
+            </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="QPushButton" name="buttonOrganize">
