--- a/Programming/5_sem (ChMV)/FNickCurs/mainwindow.ui
+++ b/Programming/5_sem (ChMV)/FNickCurs/mainwindow.ui
@@ -87,8 +87,8 @@ border-width: 0px;
           </item>
           <item>
            <widget class="QPushButton" name="buttonDelete">
-            <property name="autoFillBackground">
-             <bool>false</bool>
+            <property name="styleSheet">
+             <string notr="true">color: black;</string>
             </property>
             <property name="text">
              <string>Отменить свадьбу</string>
@@ -100,6 +100,9 @@ border-width: 0px;
           </item>
           <item>
            <widget class="QPushButton" name="buttonOrganize">
+            <property name="styleSheet">
+             <string notr="true">color: black;</string>
+            </property>
             <property name="text">
              <string>Организовать свадьбу</string>
             </property>
@@ -141,6 +144,13 @@ border-width: 0px;
              </size>
             </property>
            </spacer>
+          </item>
+          <item>
+           <widget class="QPushButton" name="buttonCancel">
+            <property name="text">
+             <string>Отменить мероприятие</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
