--- a/Programming/5_sem (ChMV)/FNickCurs/page.ui
+++ b/Programming/5_sem (ChMV)/FNickCurs/page.ui
@@ -43,7 +43,11 @@
          <item>
           <layout class="QVBoxLayout" name="verticalLayout">
            <item>
-            <widget class="QPlainTextEdit" name="descriptionEdit"/>
+            <widget class="QPlainTextEdit" name="descriptionEdit">
+             <property name="placeholderText">
+              <string>Описание мероприятия</string>
+             </property>
+            </widget>
            </item>
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout">
@@ -56,6 +60,9 @@
              </item>
              <item>
               <widget class="QSpinBox" name="bougetteSpinBox">
+               <property name="suffix">
+                <string> руб.</string>
+               </property>
                <property name="minimum">
                 <number>0</number>
                </property>
@@ -66,7 +73,7 @@
                 <number>50</number>
                </property>
                <property name="value">
-                <number>0</number>
+                <number>1</number>
                </property>
               </widget>
              </item>
@@ -78,11 +85,11 @@
           <layout class="QVBoxLayout" name="verticalLayout_2">
            <item>
             <widget class="QLabel" name="photoLabel">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
+             <property name="maximumSize">
+              <size>
+               <width>300</width>
+               <height>225</height>
+              </size>
              </property>
              <property name="frameShape">
               <enum>QFrame::Panel</enum>
