Курсовая по ЧМВ (Списки участников, организаций и вещей)
Последний функционал, который я хотел реализовать. Надеюсь, этого будет достаточно.

--- a/Programming/5_sem (ChMV)/FNickCurs/mainwindow.ui
+++ b/Programming/5_sem (ChMV)/FNickCurs/mainwindow.ui
@@ -112,7 +112,7 @@ border-width: 0px;
          <widget class="QTabWidget" name="tabWidget">
           <widget class="QWidget" name="tab">
            <attribute name="title">
-            <string>Страница</string>
+            <string>+</string>
            </attribute>
           </widget>
          </widget>
